[package]
name = "kotori"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ctrlc = { version = "3.4", features = ["termination"] }
libc = "0.2"
libbpf-rs = "0.25"
structopt = "0.3"
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9.8"
log = "0.4.29"
env_logger = "0.11.8"

[build-dependencies]
libbpf-cargo = "0.25"
